Paginate the Threshold Templates Page Add Template Export/Import Functionality Fix a Few Session Issues Fix a Few W3C Issues
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1770 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -47,6 +47,7 @@
 		Add Ability to use |ds:dsname| and |query_ifSpeed| in RPN Expression
 		Add RPN Expressions 'AND' and 'OR'
 		Add Support for Boost to Baseline Tholds
+		Add Template Export/Import Functionality
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
