Add DSStats functionality to RPN Expressions save on Disk I/O
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1771 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -48,6 +48,7 @@
 		Add RPN Expressions 'AND' and 'OR'
 		Add Support for Boost to Baseline Tholds
 		Add Template Export/Import Functionality
+		Add DSStats functionality to RPN Expressions save on Disk I/O
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
