feature: Add an index and sql clause to improve page performance feature: Make host down alarming more robust
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1809 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,6 +31,10 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+	--- 0.4.7 ---
+		feature: Add index to optimize page loads
+		feature: Allow more hosts to be reported as down
+
 	--- 0.4.6 ---
 		Add Warning Support Curtesy (Thomas Urban)
 		Improve display of Baseline Alarms
