--- a/README
+++ b/README
@@ -18,9 +18,9 @@
 	To install the plugin, please refer to the Plugin Installation Documentation
 
 	Thold requires the Settings plugin to be installed.
-    
+
 ----[ Possible Bugs?
-   
+
 	If you find a problem, let me know!!! http://bugs.cacti.net
 
 ----[ Future Changes
@@ -31,6 +31,11 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+	--- 0.5.1 ---
+		feature: Support of SNMP traps and informs ( requires the CACTI SNMPAgent plugin v0.2 or above )
+		feature: CACTI-THOLD-MIB added. Yep, Thold got its own MIB. ;)
+		Bug#0002371: Thold plugin - Undefined index: template in /var/www/html/plugins/thold/thold.php on line 273
+
 	--- 0.5 ---
 		feature: Allow threshold log retention to be configurable
 		bug: Thold Suggested Names not applied in all cases
@@ -93,8 +98,8 @@
 
 	--- 0.4.2 ---
 		Fixed Cacti 0.8.7g compatibility
-		Bug#0001753: Lotus Notes are unable to render inline png pictures 
-		Bug#0001810: Thold: RRDTool 1.4.x error while determining last RRD value 
+		Bug#0001753: Lotus Notes are unable to render inline png pictures
+		Bug#0001810: Thold: RRDTool 1.4.x error while determining last RRD value
 		Bug: Fix for compatibility with other plugins using datasource action hook
 		Bug: Re-add syslog messages for down hosts
 		Bug: Fixed a few minor issues
@@ -137,7 +142,7 @@
 		Feature: Allow logging of all Threshold creations / changing / deletions to Cacti Log File
 		Feature: Allow global disabling of all Thresholds
 		Feature: Allow setting of Syslog Facility for Syslog Logging
-		
+
 	--- 0.3.9 ---
 		Major poller speed increase when using large numbers of thresholds
 
@@ -147,7 +152,7 @@
 	--- 0.3.7 ---
 		Fix issue with thold.php not correctly saving the host id
 		Fix issue with Setting plugin having to be before thold in the plugins array
-		
+
 	--- 0.3.6 ---
 		Compatible with Cacti v0.8.7 (not backwards compatible with previous versions)
 		Fixed issue with saving user email addresses
@@ -190,9 +195,9 @@
 		Fix an index error message displayed when clicking the auto-creation link
 		Fix an issue with thresholds not switching into "is still down" mode when alerting
 		Fix a rare error where under certain conditions no data is passed back to threshold during polling
-			
+
 	--- 0.3.1 ---
-		Patch from William Riley to allow the threshold management page to be split into separate pages	
+		Patch from William Riley to allow the threshold management page to be split into separate pages
 		Fix a php short tag issue on graph_thold.php
 		Major rewrite of thold processing, now we pull from the poller output table instead of directly from the rrd files
 		Major code cleanup in a few files
@@ -207,13 +212,13 @@
 		#0000060 - Issue with "nan" values in the RRD File
 		#0000062 - Step value of the rra is not considered for fetching rrd values
 		#0000063 - CDEF function error (100 -DS)
-	
+
 	--- 0.3.0 ---
 		#0000040 - Fix issue with invalid link in Navigation panel under certain circumstances
 		#0000048 - Fix improper notification of global address when Threshold set to "Force: Off"
 		#0000042 - Add ability to apply a CDEF to the threshold before using the data
 		#0000054 - Fix issue with CDEFs on manual threshold creating page
-	
+
 	--- 0.2.9 ---
 		#0000021 - Fix for rare SQL errors when auto-creating Thresholds when no Graph is associated with a Datasource
 		#0000024 - Thold Templates not allowing for NULL Upper or Lower Baselines
@@ -228,7 +233,7 @@
 		#0000030 - Allow use of decimal values in thresholds up to 4 decimal places
 		#0000005 - Fix for threshold values not matching the graph values
 		Change "Thresholds" to "Threshold Templates"
-		
+
 	--- 0.2.7 ---
 		Fixes for "are you sure you meant month 899" errors
 		Fixes for table tholdset being empty causes poller to not function
@@ -261,7 +266,7 @@
 		 Option to send mail via PHP Mail function, Sendmail, or SMTP (even authenicated)
 		 Set the from email address and name
 		 Fixed the Host Down Notification
-		 
+
 	--- 0.2.0 ---
 		 Auto-create the database if it doesn't exist
 		 Better sorting on threshold tables
