Slight wording changes.

--- a/locales/po/cacti.pot
+++ b/locales/po/cacti.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-25 18:19-0400\n"
+"POT-Creation-Date: 2019-05-25 19:14-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2071,11 +2071,12 @@ msgid ""
 "There are three Acknowledgment levels that control how you must respond to a "
 "Threshold breach condition.  They are:<br><br><ul><li><i>None Required</i> - "
 "When you select this option, no Acknowledgment is required for a Threshold "
-"breach.</li><li><i>Reset Acknowledgment</i> - With this option, once you "
-"Acknowledge the Threshold, you will no longer receive Notifications while it "
-"is breached.</li><li><i>Persist Acknowledgment</i> - With this option, even "
-"after the Threshold has returned to normal, you must Acknowledge the "
-"Threshold and provide an optional Operator Message.</li></ul>"
+"breach.</li><li><i>Suspendible Notification</i> - With this option, once you "
+"Acknowledge or Suspend Notifications on the Threshold, you will no longer "
+"receive notifications while it is breached.  You may subsequently, Resume "
+"Notifications while its breached.</li><li><i>Persistent Acknowledgment</i> - "
+"With this option, even after the Threshold has returned to normal, you must "
+"Acknowledge the Threshold and provide an optional Operator Message.</li></ul>"
 msgstr ""
 
 #: thold.php:1479 thold_templates.php:1068
@@ -2083,11 +2084,11 @@ msgid "None Required"
 msgstr ""
 
 #: thold.php:1483 thold_templates.php:1072
-msgid "Reset Acknowledgment"
+msgid "Suspendible Notification"
 msgstr ""
 
 #: thold.php:1487 thold_templates.php:1076
-msgid "Persist Acknowledgment"
+msgid "Persistent Acknowledgment"
 msgstr ""
 
 #: thold.php:1492 thold_templates.php:1081
